--- a/app/src/main/res/layout/view_api.xml
+++ b/app/src/main/res/layout/view_api.xml
@@ -17,30 +17,96 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/animeTitle"
-            android:layout_width="246dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|top"
-            android:layout_marginLeft="65dp"
-            android:layout_marginTop="5dp"
-            android:text="TextView"
-            android:textColor="@color/white"
-            android:textAlignment="center" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="132dp"
-            android:layout_height="match_parent"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="10dp">
+            <View
+                android:id="@+id/view"
+                android:layout_width="200dp"
+                android:layout_height="1dp"
+                android:layout_marginEnd="44dp"
+                android:background="#000000"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/animeTitle" />
 
-            <ImageView
-                android:id="@+id/animeImage"
-                android:layout_width="129dp"
+            <View
+                android:id="@+id/view3"
+                android:layout_width="200dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="44dp"
+                android:background="#000000"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/scoreText" />
+
+            <TextView
+                android:id="@+id/animeTitle"
+                android:layout_width="246dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|top"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="16dp"
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/scoreText"
+                android:layout_width="44dp"
+                android:layout_height="19dp"
+                android:layout_gravity="center|top"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
+                android:text="Score: "
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toEndOf="@+id/cardView"
+                app:layout_constraintTop_toBottomOf="@+id/view" />
+
+            <TextView
+                android:id="@+id/animeScore"
+                android:layout_width="35dp"
+                android:layout_height="18dp"
+                android:layout_gravity="center|top"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="12dp"
+                android:text="10"
+                android:textAlignment="textStart"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toEndOf="@+id/scoreText"
+                app:layout_constraintTop_toBottomOf="@+id/view" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView"
+                android:layout_width="132dp"
                 android:layout_height="match_parent"
-                tools:srcCompat="@tools:sample/backgrounds/scenic" />
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-        </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/animeImage"
+                    android:layout_width="129dp"
+                    android:layout_height="match_parent"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/animeDesc"
+                android:layout_width="268dp"
+                android:layout_height="69dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="8dp"
+                android:text="TextView"
+                app:layout_constraintStart_toEndOf="@+id/cardView"
+                app:layout_constraintTop_toBottomOf="@+id/view3" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
