--- a/app/src/main/res/layout/view_api.xml
+++ b/app/src/main/res/layout/view_api.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
-    android:layout_margin="5dp
-">
+    android:layout_height="170dp"
+    android:layout_margin="5dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="411dp"
@@ -63,7 +62,7 @@
                 android:text="Score: "
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                app:layout_constraintStart_toEndOf="@+id/cardView"
+                app:layout_constraintStart_toEndOf="@+id/detailImageCard"
                 app:layout_constraintTop_toBottomOf="@+id/view" />
 
             <TextView
@@ -80,9 +79,9 @@
                 app:layout_constraintTop_toBottomOf="@+id/view" />
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cardView"
-                android:layout_width="132dp"
-                android:layout_height="match_parent"
+                android:id="@+id/detailImageCard"
+                android:layout_width="129dp"
+                android:layout_height="168dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="10dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -92,6 +91,7 @@
                     android:id="@+id/animeImage"
                     android:layout_width="129dp"
                     android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
                     tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
             </androidx.cardview.widget.CardView>
@@ -103,7 +103,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="8dp"
                 android:text="TextView"
-                app:layout_constraintStart_toEndOf="@+id/cardView"
+                app:layout_constraintStart_toEndOf="@+id/detailImageCard"
                 app:layout_constraintTop_toBottomOf="@+id/view3" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
