--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -23,9 +23,11 @@
             app:layout_constraintTop_toBottomOf="@+id/textView">
 
             <SearchView
+                android:id="@+id/searchAnime"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white" />
+                android:background="@color/white"
+                android:queryHint="EJ: Dragon Ball"/>
         </androidx.cardview.widget.CardView>
 
         <TextView
