--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -42,6 +42,20 @@
         app:layout_constraintStart_toEndOf="@+id/detailImageCard"
         app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
+    <Button
+        android:id="@+id/buttonExt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:autoText="false"
+        android:background="@color/white"
+        android:text="More info"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sypnosisCard"
+        app:backgroundTint="@color/white"
+        android:textColor="@color/bg_variant"/>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="247dp"
@@ -93,73 +107,91 @@
         app:layout_constraintTop_toBottomOf="@+id/view2"
         app:cardBackgroundColor="@color/bg_variant">
 
-        <View
-            android:id="@+id/view5"
-            android:layout_width="271dp"
-            android:layout_height="1dp"
-            android:layout_gravity="center"
-            android:background="#000000"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.491"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button"
-            android:backgroundTint="@color/white"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/detailScore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:paddingStart="5dp"
+                android:text="10"
+                android:textColor="@color/white"
+                android:textSize="34sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <View
+                android:id="@+id/view5"
+                android:layout_width="271dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="8dp"
+                android:background="#000000"
+                android:backgroundTint="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/detailPopularity" />
+
+            <TextView
+                android:id="@+id/detailRating"
+                android:layout_width="200dp"
+                android:layout_height="15dp"
+                android:layout_marginTop="8dp"
+                android:paddingEnd="5dp"
+                android:text="Rating"
+                android:textAlignment="textEnd"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                app:layout_constraintTop_toBottomOf="@+id/detailAiringDate"
+                tools:layout_editor_absoluteX="131dp" />
+
+            <TextView
+                android:id="@+id/detailPopularity"
+                android:layout_width="95dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:paddingStart="5dp"
+                android:text="576 in Popularity"
+                android:textAlignment="textStart"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/detailScore" />
+
+            <TextView
+                android:id="@+id/detailAiringDate"
+                android:layout_width="199dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="4dp"
+                android:paddingEnd="5dp"
+                android:text="From To"
+                android:textAlignment="viewEnd"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/detailStatus" />
+
+            <TextView
+                android:id="@+id/detailStatus"
+                android:layout_width="196dp"
+                android:layout_height="15dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="4dp"
+                android:paddingEnd="5dp"
+                android:text="Finished Airing"
+                android:textAlignment="textEnd"
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-        <TextView
-            android:id="@+id/detailScore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginLeft="5dp"
-            android:text="10"
-            android:textColor="@color/white"
-            android:textSize="34sp" />
-
-        <TextView
-            android:id="@+id/detailStatus"
-            android:layout_width="95dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="5dp"
-            android:text="Finished Airing"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="10sp" />
-
-        <TextView
-            android:id="@+id/detailRating"
-            android:layout_width="151dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="35dp"
-            android:text="Rating"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="10sp" />
-
-        <TextView
-            android:id="@+id/detailAiringDate"
-            android:layout_width="199dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="20dp"
-            android:paddingRight="20dp"
-            android:text="From To"
-            android:textAlignment="viewEnd"
-            android:textColor="@color/white"
-            android:textSize="10sp" />
-
-        <TextView
-            android:id="@+id/detailPopularity"
-            android:layout_width="95dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="40dp"
-            android:text="576 in Popularity"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="10sp" />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
