--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,7 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"
-                android:queryHint="EJ: Dragon Ball"/>
+                android:queryHint="EJ: Naruto"/>
         </androidx.cardview.widget.CardView>
 
         <TextView
