--- a/app/src/main/res/layout/view_api.xml
+++ b/app/src/main/res/layout/view_api.xml
@@ -20,6 +20,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <TextView
+                android:id="@+id/animeStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="136dp"
+                android:layout_marginTop="12dp"
+                android:text="Airing"
+                android:textAlignment="textEnd"
+                app:layout_constraintStart_toEndOf="@+id/animeScore"
+                app:layout_constraintTop_toBottomOf="@+id/animeTitle"
+                android:textColor="@color/white"/>
+
             <View
                 android:id="@+id/view"
                 android:layout_width="200dp"
