--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,119 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorPrimaryVariant"
-    tools:context=".HostActivity">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="?attr/colorPrimary">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="337dp"
-            android:layout_height="44dp"
-            android:layout_marginTop="28dp"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView">
-
-            <SearchView
-                android:id="@+id/searchAnime"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white"
-                android:queryHint="EJ: Naruto"/>
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="138dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="16dp"
-            android:text="Hikadashi"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerApi"
-        android:requiresFadingEdge="vertical"
-        android:fadingEdgeLength="100dp"
-        android:layout_marginTop="150dp"
+    tools:context=".HostActivity"
+    tools:openDrawer="start">
+    <include
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/view_api">
+    />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?attr/colorPrimaryVariant">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="?attr/colorPrimary">
 
-    <com.google.android.material.progressindicator.CircularProgressIndicator
-        android:id="@+id/progress"
+            <androidx.cardview.widget.CardView
+                android:layout_width="337dp"
+                android:layout_height="44dp"
+                android:layout_marginTop="28dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView">
+
+                <SearchView
+                    android:id="@+id/searchAnime"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/white"
+                    android:queryHint="EJ: Naruto"/>
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="138dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="16dp"
+                android:text="Hikadashi"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerApi"
+            android:requiresFadingEdge="vertical"
+            android:fadingEdgeLength="100dp"
+            android:layout_marginTop="150dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/view_api">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:visibility="gone"
+            app:indicatorColor="@color/white" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="389dp"
+            android:layout_height="43dp"
+            android:layout_gravity="bottom|center"
+            android:layout_marginBottom="15dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="8dp">
+
+            <Button
+                android:id="@+id/buttonFY"
+                android:layout_width="96dp"
+                android:layout_height="match_parent"
+                android:text="For you"
+                android:textSize="10sp"
+                android:textColor="@color/black"
+                android:background="@android:color/transparent"/>
+
+            <Button
+                android:id="@+id/buttonAiring"
+                android:layout_width="96dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="100dp"
+                android:text="Airing"
+                android:textSize="10sp"
+                android:textColor="@color/black"
+                android:background="@android:color/transparent"/>
+
+            <Button
+                android:id="@+id/buttonUpcoming"
+                android:layout_width="96dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="200dp"
+                android:text="Upcoming"
+                android:textSize="10sp"
+                android:textColor="@color/black"
+                android:background="@android:color/transparent"/>
+
+            <Button
+                android:id="@+id/buttonMostP"
+                android:layout_width="96dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="300dp"
+                android:text="Most Popular"
+                android:textSize="10sp"
+                android:textColor="@color/black"
+                android:background="@android:color/transparent"/>
+        </androidx.cardview.widget.CardView>
+
+    </FrameLayout>
+    <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:indeterminate="true"
-        android:visibility="gone"
-        app:indicatorColor="@color/white" />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="389dp"
-        android:layout_height="43dp"
-        android:layout_gravity="bottom|center"
-        android:layout_marginBottom="15dp"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="8dp">
-
-        <Button
-            android:id="@+id/buttonFY"
-            android:layout_width="96dp"
-            android:layout_height="match_parent"
-            android:text="For you"
-            android:textSize="10sp"
-            android:textColor="@color/black"
-            android:background="@android:color/transparent"/>
-
-        <Button
-            android:id="@+id/buttonAiring"
-            android:layout_width="96dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="100dp"
-            android:text="Airing"
-            android:textSize="10sp"
-            android:textColor="@color/black"
-            android:background="@android:color/transparent"/>
-
-        <Button
-            android:id="@+id/buttonUpcoming"
-            android:layout_width="96dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="200dp"
-            android:text="Upcoming"
-            android:textSize="10sp"
-            android:textColor="@color/black"
-            android:background="@android:color/transparent"/>
-
-        <Button
-            android:id="@+id/buttonMostP"
-            android:layout_width="96dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="300dp"
-            android:text="Most Popular"
-            android:textSize="10sp"
-            android:textColor="@color/black"
-            android:background="@android:color/transparent"/>
-    </androidx.cardview.widget.CardView>
-
-</FrameLayout>
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer" />
+</androidx.drawerlayout.widget.DrawerLayout>
