--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:title="My list">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
+    <group>
+        <item android:id="@+id/nav_item_mylist"
+            android:icon="@drawable/baseline_menu_book_24"
+            android:title="My List"/>
+        <item android:id="@+id/nav_item_discover"
+            android:icon="@drawable/baseline_search_24"
+            android:title="Discover"/>
 
-        <item android:id="@+id/nav_item_watching"
-            android:title="Watching"/>
-        <item android:id="@+id/nav_item_plan_to_watch"
-            android:title="Plan to Watch"/>
-        <item android:id="@+id/nav_item_on_hold"
-            android:title="On Hold"/>
-        <item android:id="@+id/nav_item_dropped"
-            android:title="Dropped"/>
     </group>
-
-    <item android:id="@+id/nav_item_discover"
-        android:title="Discover"/>
+    <item></item>
+    <item android:id="@+id/nav_item_logoff"
+        android:icon="@drawable/baseline_logout_24"
+        android:title="Sign out"/>
 
 </menu>
